components/network-policies/manifests/extensions-admission-workaround.yaml
# Allows outgoing traffic to the virtual kube-apiserver pods.
# This is a workaround for the gardener extension admission controllers.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: extensions-admission-workaround
  namespace: (( landscape.namespace ))
spec:
  podSelector:
    matchLabels:
      networking.resources.gardener.cloud/to-virtual-garden-kube-apiserver-tcp-443: allowed
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: garden
          component: kube-apiserver
