components/network-policies/manifests/to-etcd.yaml
# Allows outgoing traffic to the virtual garden etcd.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-etcd
  namespace: (( landscape.namespace ))
spec:
  podSelector:
    matchLabels:
      networking.gardener.cloud/to-etcd: allowed
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: etcd
