components/network-policies/manifests/to-identity.yaml
# Allows outgoing traffic to the identity pod.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-identity
  namespace: (( landscape.namespace ))
spec:
  podSelector:
    matchLabels:
      networking.gardener.cloud/to-identity: allowed
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: identity
