components/network-policies/manifests/to-terminal-controller-manager.yaml
# Allows outgoing traffic to the terminal-controller-manager
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-terminal-controller-manager
  namespace: (( landscape.namespace ))
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: terminal
      podSelector:
        matchLabels:
          app.kubernetes.io/name: terminal
  podSelector:
    matchLabels:
      networking.gardener.cloud/to-terminal-controller-manager: allowed
  policyTypes:
  - Egress
